--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="page_type" content="np-template-header-footer-from-plugin">
-    <title>Home</title>
+    <title>PL Tutors</title>
     <link rel="stylesheet" href="nicepage.css" media="screen">
-<link rel="stylesheet" href="Home.css" media="screen">
+<link rel="stylesheet" href="PL-Tutors.css" media="screen">
     <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
     <script class="u-script" type="text/javascript" src="nicepage.js" defer=""></script>
     <link rel="icon" href="images/favicon.png">
@@ -25,13 +25,13 @@
 		"url": "index.html",
 		"logo": "images/favicon.png"
 }</script>
-    <meta property="og:title" content="Home">
+    <meta property="og:title" content="PL Tutors">
     <meta property="og:type" content="website">
     <meta name="theme-color" content="#eaeffe">
     <link rel="canonical" href="index.html">
     <meta property="og:url" content="index.html">
   </head>
-  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body"><header class="u-clearfix u-header u-header" id="sec-d408"><a href="https://nicepage.com" class="u-image u-image-round u-logo u-image-1" data-image-width="283" data-image-height="283">
+  <body data-home-page="PL-Tutors.html" data-home-page-title="PL Tutors" class="u-body"><header class="u-clearfix u-header u-header" id="sec-d408"><a href="https://nicepage.com" class="u-image u-image-round u-logo u-image-1" data-image-width="283" data-image-height="283">
         <img src="images/favicon.png" class="u-logo-image u-logo-image-1" data-image-width="64">
       </a><nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
         <div class="menu-collapse u-custom-font" style="font-size: 1rem; letter-spacing: 0px; font-family: Poppins;">
@@ -42,31 +42,35 @@
 </defs></svg>
           </a>
         </div>
-        <div class="u-nav-container">
-          <ul class="u-custom-font u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-2 u-text-hover-custom-color-6" href="Home.html" style="padding: 10px 20px;">Home</a>
+        <div class="u-custom-menu u-nav-container">
+          <ul class="u-custom-font u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-2 u-text-hover-custom-color-6" href="PL-Tutors.html" style="padding: 10px 20px;">Strona główna</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-2 u-text-hover-custom-color-6" href="Szybkie-porady.html" style="padding: 10px 20px;">Szybkie porady</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-2 u-text-hover-custom-color-6" href="Programy.html" style="padding: 10px 20px;">Programy</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-2 u-text-hover-custom-color-6" href="O-mnie.html" style="padding: 10px 20px;">O mnie</a>
 </li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-custom-color-2 u-text-hover-custom-color-6" href="Kontakt.html" style="padding: 10px 20px;">Kontakt</a>
 </li></ul>
         </div>
-        <div class="u-nav-container-collapse">
+        <div class="u-custom-menu u-nav-container-collapse">
           <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
             <div class="u-sidenav-overflow">
               <div class="u-menu-close"></div>
-              <ul class="u-align-center u-nav u-popupmenu-items u-spacing-2 u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="O-mnie.html">O mnie</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Kontakt.html">Kontakt</a>
+              <ul class="u-align-center u-nav u-popupmenu-items u-spacing-2 u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="PL-Tutors.html" style="padding: 10px 20px;">Strona główna</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Szybkie-porady.html" style="padding: 10px 20px;">Szybkie porady</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Programy.html" style="padding: 10px 20px;">Programy</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="O-mnie.html" style="padding: 10px 20px;">O mnie</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Kontakt.html" style="padding: 10px 20px;">Kontakt</a>
 </li></ul>
             </div>
           </div>
           <div class="u-black u-menu-overlay u-opacity u-opacity-70"></div>
         </div>
-      </nav><h4 class="u-text u-text-1">PL Tutors</h4><div class="u-border-1 u-border-grey-10 u-expanded-width u-line u-line-horizontal u-line-1"></div></header>
+      </nav><div class="u-border-1 u-border-grey-10 u-expanded-width u-line u-line-horizontal u-line-1"></div></header>
     <section class="u-clearfix u-section-1" id="sec-bd53">
       <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <div class="u-clearfix u-expanded-width u-gutter-0 u-layout-wrap u-layout-wrap-1">
           <div class="u-layout" style="">
             <div class="u-layout-row" style="">
-              <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-30 u-size-xs-60 u-white u-layout-cell-1" src="">
+              <div class="u-align-left u-container-style u-layout-cell u-left-cell u-size-26 u-size-xs-60 u-white u-layout-cell-1" src="">
                 <div class="u-container-layout u-container-layout-1">
                   <img src="images/opera_Oa7DQPHEdg.png" alt="" class="u-align-center u-image u-image-default u-image-1" data-image-width="645" data-image-height="650" data-animation-name="rotateIn" data-animation-duration="1000" data-animation-delay="0" data-animation-direction="DownRight">
                   <h2 class="u-text u-text-1">Cześć!<br>Witaj na PL Tutors.
@@ -74,13 +78,13 @@
                   <p class="u-text u-text-2">Lorem ipsum...</p>
                   <div class="u-container-style u-expanded-width-lg u-expanded-width-md u-expanded-width-sm u-expanded-width-xs u-group u-shape-rectangle u-group-1">
                     <div class="u-container-layout u-container-layout-2">
-                      <a href="" class="u-btn u-btn-round u-button-style u-none u-radius-5 u-text-grey-50 u-btn-1">Dowiedz się więcej&nbsp;→</a>
+                      <a href="O-mnie.html" data-page-id="958411020" class="u-btn u-btn-round u-button-style u-none u-radius-5 u-text-grey-50 u-btn-1">Dowiedz się więcej&nbsp;→</a>
                       <a href="" class="u-btn u-btn-round u-button-style u-custom-color-1 u-hover-custom-color-3 u-radius-5 u-text-custom-color-2 u-btn-2">Zaczynamy!</a>
                     </div>
                   </div>
                 </div>
               </div>
-              <div class="u-align-center u-container-style u-image u-layout-cell u-right-cell u-size-30 u-size-xs-60 u-image-2" src="" data-image-width="654" data-image-height="654">
+              <div class="u-align-center u-container-style u-image u-layout-cell u-right-cell u-size-34 u-size-xs-60 u-image-2" src="" data-image-width="1920" data-image-height="1015">
                 <div class="u-container-layout u-valign-middle u-container-layout-3" src=""></div>
               </div>
             </div>
@@ -103,45 +107,91 @@
         <h2 class="u-align-center u-text u-text-1">Zobacz również</h2>
         <div class="u-expanded-width u-list u-repeater u-list-1">
           <div class="u-align-left u-border-1 u-border-custom-color-5 u-container-style u-list-item u-radius-10 u-repeater-item u-shape-round u-white u-list-item-1">
-            <div class="u-container-layout u-similar-container u-container-layout-1"></div>
+            <div class="u-container-layout u-similar-container u-container-layout-1">
+              <h4 class="u-text u-text-default u-text-2">Przykładowy Nagłówek</h4>
+            </div>
           </div>
           <div class="u-border-1 u-border-custom-color-5 u-container-style u-list-item u-radius-10 u-repeater-item u-shape-round u-white u-list-item-2">
-            <div class="u-container-layout u-similar-container u-container-layout-2"></div>
+            <div class="u-container-layout u-similar-container u-container-layout-2">
+              <h4 class="u-text u-text-default u-text-3">Przykładowy Nagłówek</h4>
+            </div>
           </div>
           <div class="u-border-1 u-border-custom-color-5 u-container-style u-list-item u-radius-10 u-repeater-item u-shape-round u-white u-list-item-3">
-            <div class="u-container-layout u-similar-container u-container-layout-3"></div>
+            <div class="u-container-layout u-similar-container u-container-layout-3">
+              <h4 class="u-text u-text-default u-text-4">Przykładowy Nagłówek</h4>
+            </div>
           </div>
           <div class="u-border-1 u-border-custom-color-5 u-container-style u-list-item u-radius-10 u-repeater-item u-shape-round u-white u-list-item-4">
-            <div class="u-container-layout u-similar-container u-container-layout-4"></div>
+            <div class="u-container-layout u-similar-container u-container-layout-4">
+              <h4 class="u-text u-text-default u-text-5">Przykładowy Nagłówek</h4>
+            </div>
           </div>
           <div class="u-border-1 u-border-custom-color-5 u-container-style u-list-item u-radius-10 u-repeater-item u-shape-round u-white u-list-item-5">
-            <div class="u-container-layout u-similar-container u-container-layout-5"></div>
+            <div class="u-container-layout u-similar-container u-container-layout-5">
+              <h4 class="u-text u-text-default u-text-6">Przykładowy Nagłówek</h4>
+            </div>
           </div>
           <div class="u-border-1 u-border-custom-color-5 u-container-style u-list-item u-radius-10 u-repeater-item u-shape-round u-white u-list-item-6">
-            <div class="u-container-layout u-similar-container u-container-layout-6"></div>
+            <div class="u-container-layout u-similar-container u-container-layout-6">
+              <h4 class="u-text u-text-default u-text-7">Przykładowy Nagłówek</h4>
+            </div>
           </div>
         </div>
       </div>
     </section>
     
     
-    <footer class="u-clearfix u-footer u-valign-middle u-footer" id="sec-2352"><div class="u-border-1 u-border-grey-10 u-expanded-width u-line u-line-horizontal u-line-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""></div><div class="u-list u-repeater u-list-1">
-        <div class="u-container-style u-list-item u-repeater-item">
-          <div class="u-container-layout u-similar-container u-container-layout-1">
-            <p class="u-text u-text-default u-text-1">Tu będą ikonki społecznościowe<br>
-            </p>
+    <footer class="u-clearfix u-footer u-footer" id="sec-2352"><div class="u-gallery u-layout-grid u-no-transition u-show-text-none u-gallery-1">
+        <div class="u-gallery-inner u-gallery-inner-1">
+          <div class="u-gallery-item" data-href="https://youtube.com/c/PLTutorsTV" data-target="_blank">
+            <div class="u-back-slide" data-image-width="257" data-image-height="257">
+              <img class="u-back-image u-expanded u-image-contain" src="images/YouTube.png">
+            </div>
+            <div class="u-over-slide u-shading u-over-slide-1">
+              <h3 class="u-gallery-heading"></h3>
+              <p class="u-gallery-text"></p>
+            </div>
+          </div>
+          <div class="u-gallery-item" data-href="https://discord.com/invite/KCcNRsW" data-target="_blank">
+            <div class="u-back-slide" data-image-width="257" data-image-height="257">
+              <img class="u-back-image u-expanded u-image-contain" src="images/Discord.png">
+            </div>
+            <div class="u-over-slide u-shading u-over-slide-2">
+              <h3 class="u-gallery-heading"></h3>
+              <p class="u-gallery-text"></p>
+            </div>
+          </div>
+          <div class="u-gallery-item u-gallery-item-3" data-href="https://twitter.com/PL_Tutors" data-target="_blank">
+            <div class="u-back-slide" data-image-width="256" data-image-height="257">
+              <img class="u-back-image u-expanded u-image-contain" src="images/Twitter.png">
+            </div>
+            <div class="u-over-slide u-shading u-over-slide-3">
+              <h3 class="u-gallery-heading"></h3>
+              <p class="u-gallery-text"></p>
+            </div>
+          </div>
+          <div class="u-gallery-item u-gallery-item-4" data-href="https://www.facebook.com/PLTuts/" data-target="_blank">
+            <div class="u-back-slide" data-image-width="257" data-image-height="257">
+              <img class="u-back-image u-expanded u-image-contain" src="images/Facebook.png">
+            </div>
+            <div class="u-over-slide u-shading u-over-slide-4">
+              <h3 class="u-gallery-heading"></h3>
+              <p class="u-gallery-text"></p>
+            </div>
+          </div>
+          <div class="u-gallery-item" data-href="https://patronite.pl/pltutors">
+            <div class="u-back-slide" data-image-width="257" data-image-height="257">
+              <img class="u-back-image u-expanded u-image-contain" src="images/Patronite.png">
+            </div>
+            <div class="u-over-slide u-shading u-over-slide-5">
+              <h3 class="u-gallery-heading"></h3>
+              <p class="u-gallery-text"></p>
+            </div>
           </div>
         </div>
-        <div class="u-container-style u-list-item u-repeater-item">
-          <div class="u-container-layout u-similar-container u-container-layout-2">
-            <p class="u-text u-text-default u-text-2">Tu będą ikonki społecznościowe</p>
-          </div>
-        </div>
-        <div class="u-container-style u-list-item u-repeater-item">
-          <div class="u-container-layout u-similar-container u-container-layout-3">
-            <p class="u-text u-text-default u-text-3">Tu będą ikonki społecznościowe</p>
-          </div>
-        </div>
-      </div><div class="u-expanded-width u-gradient u-shape u-shape-rectangle u-shape-1"></div></footer>
+      </div><div class="u-border-1 u-border-grey-10 u-expanded-width u-line u-line-horizontal u-line-1" data-animation-name="" data-animation-duration="0" data-animation-delay="0" data-animation-direction=""></div><div class="u-expanded-width u-gradient u-shape u-shape-rectangle u-shape-1"></div></footer><span style="height: 64px; width: 64px; margin-left: 0px; margin-right: auto; margin-top: 0px; background-image: none; right: 20px; bottom: 20px" class="u-back-to-top u-icon u-icon-circle u-opacity u-opacity-85 u-palette-1-base u-spacing-15" data-href="#">
+        <svg class="u-svg-link" preserveAspectRatio="xMidYMin slice" viewBox="0 0 551.13 551.13"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#svg-1d98"></use></svg>
+        <svg class="u-svg-content" enable-background="new 0 0 551.13 551.13" viewBox="0 0 551.13 551.13" xmlns="http://www.w3.org/2000/svg" id="svg-1d98"><path d="m275.565 189.451 223.897 223.897h51.668l-275.565-275.565-275.565 275.565h51.668z"></path></svg>
+    </span>
   </body>
 </html>
